--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-test-ca
+<!doctype html>
+<html lang="cn">
+<head>
+		<title>haodai</title>
+		<meta name="description" content="haodai" />
+		<meta name="keywords"content="keywords haodai" />
+		<meta name="Author" content="wanguo" />
+		<base target="_blank" />
+		<link rel="stylesheet" type="text/css" href="./css/default.css">
+		<script type="text/javascript" src="./js/default.js"></script>
+</head>
+<body>
+<header>header</header>
+<div class="nav-search">nav-search</div>
+<div class="nav-channel">nav-channel</div>
+<!--End:导航列表区-->
+<div class="header-data">header-list</div>
+<!--End:公告信息-->
+<div class="main">main</div>
+<!--End:主体-->
+<div class="footer"></div>
+<!--End:底部-->
+</body>
+</html>
