eidt index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 		<script type="text/javascript" src="./js/default.js"></script>
 </head>
 <body>
-<header>header</header>
+<header id="main-header" class="error-head" style="position:static;">
+		<div class="area">
+				<div class="nav-head left"></div>
+				<div class="nav-sign"></div>
+		</div>
+</header>
 <div class="nav-search">nav-search</div>
 <div class="nav-channel">nav-channel</div>
 <!--End:导航列表区-->
