--- a/nav.html
+++ b/nav.html
@@ -1,3 +1,4 @@
+<!--
 <div class="nav-search">
 	<div class="w1190 clearfix">
 		<h2 class="transition">
@@ -9,6 +10,7 @@
 		<div class="logoright"></div>
 	</div>
 </div>
+-->
 <div class="nav-channel clearfix">
 	<div class="channer-main channer-a">
 		<ul class="clearfix">
@@ -26,50 +28,7 @@
 			<li><a href="#">好贷</a></li>
 			<li><a href="#">信贷圈</a></li>
 		</ul>
-		<ul class="clearfix">
-			<li>
-				<a class="red" href="#" title="汉堡金融">
-					<strong>汉堡</strong>
-				</a>
-			</li>
-			<li>
-				<a class="red" href="#">国内</a>
-			</li>
-			<li>
-				<a href="#">国际</a>
-			</li>
-			<li><a href="#">好贷</a></li>
-			<li><a href="#">信贷圈</a></li>
-		</ul>
-		<ul class="clearfix">
-			<li>
-				<a class="red" href="#" title="汉堡金融">
-					<strong>汉堡</strong>
-				</a>
-			</li>
-			<li>
-				<a class="red" href="#">国内</a>
-			</li>
-			<li>
-				<a href="#">国际</a>
-			</li>
-			<li><a href="#">好贷</a></li>
-			<li><a href="#">信贷圈</a></li>
-		</ul>
-		<ul class="clearfix">
-			<li>
-				<a class="red" href="#" title="汉堡金融">
-					<strong>汉堡</strong>
-				</a>
-			</li>
-			<li>
-				<a class="red" href="#">国内</a>
-			</li>
-			<li>
-				<a href="#">国际</a>
-			</li>
-			<li><a href="#">好贷</a></li>
-			<li><a href="#">信贷圈</a></li>
+		
 	</div>
 	<div class="channer-main channer-b">
 		<ul class="clearfix">
@@ -87,6 +46,8 @@
 			<li><a href="#">好贷</a></li>
 			<li><a href="#">信贷圈</a></li>
 		</ul>
+	</div>
+	<div class="channer-main channer-b">
 		<ul class="clearfix">
 			<li>
 				<a class="red" href="#" title="汉堡金融">
@@ -102,21 +63,8 @@
 			<li><a href="#">好贷</a></li>
 			<li><a href="#">信贷圈</a></li>
 		</ul>
-		<ul class="clearfix">
-			<li>
-				<a class="red" href="#" title="汉堡金融">
-					<strong>汉堡</strong>
-				</a>
-			</li>
-			<li>
-				<a class="red" href="#">国内</a>
-			</li>
-			<li>
-				<a href="#">国际</a>
-			</li>
-			<li><a href="#">好贷</a></li>
-			<li><a href="#">信贷圈</a></li>
-		</ul>
+	</div>
+	<div class="channer-main channer-b">
 		<ul class="clearfix">
 			<li>
 				<a class="red" href="#" title="汉堡金融">
